@@ -1,3 +1,7 @@
+2010-04-25  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* gnat.dg/pack15.ad[sb]: New test.
+
 2010-04-24  Steven G. Kargl  <kargl@gcc.gnu.org>
 
 	PR fortran/30073
